fix overflow progress bar examples

--- a/stonks-only-go-up/src/Components/HypeMeter.css
+++ b/stonks-only-go-up/src/Components/HypeMeter.css
@@ -1,36 +1,22 @@
-.progress {
-    display: block;
-    width: 480px;
-    max-width: 90%;
-    margin: 1em auto;
-    padding: 6px;
-    border: 0 none;
-    background: rgba(0,0,0,.55);
-    border-radius: 14px;
-    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-  }
-  
-  /* firefox */
-  .progress-value {
-    width: 0;
-    height: 14px;
-    background: #FFF linear-gradient(to right, #17CEC2, #F1C500);
-    border-radius: 12px;
-    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
-    animation: loading 7s infinite linear;
-  }
-  
-  @keyframes loading {
-    0% {
-      width: 0;
-    }
-    80% {
-      width: 58%;
-    } 
-    90%, 100% {
-      width: 100%;
-    }
-  }
-  
-  
-  /* Not important styles */
+#hype-meter-wrapper {
+    height: 20px;
+    width: 100%;
+    background-color: #e0e0de;
+    border-radius: 42px;
+}
+
+#hyper-meter-inner {
+    height: 100%;
+    background: linear-gradient(90deg, rgba(232, 9, 28, 1) 0%, rgba(111, 3, 252, 1) 100%);
+    border-radius: 42px;
+    text-align: right;
+    transition: width 3s ease-in-out;
+}
+
+#hype-score {
+    padding-top: 4px;
+    padding-right: 6px;
+    margin: 0;
+    font-size: 12px;
+    font-weight: bold;
+}
